src/hg/encode/hgEncodeSubmit/public/stylesheets/encode.css
body {
  #font-family: Helvetica, Geneva, Arial, sans-serif;
  font-family: sans-serif;
}

#container {
}

#header {
  padding: 5px;
  font-size: 18pt;
  text-align: left;
}

#user {
  text-align: right;
  margin-top: 0px;
  font-size: 12pt;
  padding: 0.25em;
}

#nav {
  font-size: 12pt;
  font-weight; bold;
  background: #ddd;
  padding: 0.5em;
}

#nav a, #nav a:visited {
  font-size: 12pt;
  text-decoration: none;
}

a {
text-decoration: none;
}

#nav a:hover {
  border-bottom: 2px dotted;
}

#content {
  font-size: 12pt;
  margin-left: 15%;
}

#welcome {
  font-size: 12pt;
  margin-top:5%;
  margin-left: 15%;
  margin-right: 15%;
  padding: 5%;
  border: 2px solid #bbb;
}

#footer {
  font-size: 12pt;
  text-align: center;
  background: #ddd;
  margin-left: 35%;
  width: 150px;
  padding: 0.4em;
}

#content a, #content a:visited, #footer a, #footer a:visited #welcome a, #welcome a:visited {
  text-decoration: none;
  margin-bottom: 0;
  margin-top: 0;
}

#content a:hover, #footer a:hover  {
  border-bottom: 2px dotted;
}

#content h1 {
  font-size: 14pt;
}

#message {
  font-size: 12pt;
  margin-top: 18px;
  margin-bottom: 9px;
}

#notice  { background:#9e9; color:#222; padding: 5px }
#warning { background:#ee8; color:#222; padding: 5px }
#error { background:#fbb; color:#222; padding: 5px }
.flash { padding:10px; text-align:center}

.fieldWithErrors {
    display: table;
    padding: 2px;
}

#errorExplanation {
    font-size: 12pt;
    padding-bottom: 5px;
    background-color:#f0f0f0;
}

#errorExplanation h2 {
    text-align: left;
    padding: 4px 4px 4px 10px;
    font-size: 12pt;
}

input {
    margin: 2px;
    font-size: 12pt;
}

